<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:cardCornerRadius="@dimen/dimen_8dp"
        app:contentPadding="@dimen/dimen_12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_100dp"
            android:layout_marginEnd="@dimen/dimen_100dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Camera"
                android:textColor="@android:color/white"
                app:cornerRadius="@dimen/dimen_8dp"
                app:icon="@drawable/ic_photo_camera_black_24dp"
                app:iconTint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/fromGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@android:color/white"
                android:text="Gallery"
                android:textColor="@android:color/white"
                app:cornerRadius="@dimen/dimen_8dp"
                app:icon="@drawable/ic_gallery_black_24dp"
                app:iconTint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCamera" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
